--- a/templates/index.html
+++ b/templates/index.html
@@ -193,7 +193,16 @@ Number.prototype.format = function(n, x, s, c) {
     return (c ? num.replace('.', c) : num).replace(new RegExp(re, 'g'), '$&' + (s || ','));
 };
 
+function setViewport(){
+    var meta = document.createElement('meta');
+    meta.name= "viewport";
+    meta.content = "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no";
+    document.getElementsByTagName('head')[0].appendChild(meta);
+}
 
+$(document).ready(function() {
+    setViewport();
+});
 
 </script>
 
