--- a/templates/index.html
+++ b/templates/index.html
@@ -194,7 +194,7 @@ Number.prototype.format = function(n, x, s, c) {
 };
 
 function setViewport(){
-    var meta = document.createElement('meta');
+    var meta = window.parent.document.createElement('meta');
     meta.name= "viewport";
     meta.content = "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no";
     document.getElementsByTagName('head')[0].appendChild(meta);
