--- a/templates/index.html
+++ b/templates/index.html
@@ -51,8 +51,8 @@
 
 </div>
 
-<h3 id="randoms_number" class="title">Ilość losowań: 100.000</h3>
-<input id="randoms_number_slider" type="range" min="1" max="100000" value="100000" onchange="randomsNumberChanged(this.value)" oninput="randomsNumberChanged(this.value)">
+<h3 id="randoms_number" class="title">Ilość losowań: 1.000.000</h3>
+<input id="randoms_number_slider" type="range" min="1" max="1000000" value="1000000" onchange="randomsNumberChanged(this.value)" oninput="randomsNumberChanged(this.value)">
 <BR>
 
 <button id="random_button" type="button" class="btn btn-primary center-block" onclick="random()" disabled>Losuj</button>
